added icon for footer

--- a/index.html
+++ b/index.html
@@ -323,9 +323,8 @@
 				</div>
 				<div class="container__top__inside__first-order">
 					<!--first order div-->
-					<img class="first-order__inside__icon" src="" alt="logo">
-					<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP
-						TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
+					<img class="first-order__inside__icon" src="img/footer_icon.svg" alt="logo">
+					<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
 				</div>
 				<div class="container__top__inside__form">
 					<!--form div-->
@@ -372,10 +371,8 @@
 					</span>
 					<div class="follow-us__line"></div>
 					<div class="footer__follow-us__link">
-						<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg"
-								alt="Face Book"></a>___
-						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg"
-								alt="Instagram"></a>
+						<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg" alt="Face Book"></a>
+						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg" alt="Instagram"></a>
 						<a href="https://youtube.com"><img class="footer__social" src="img/youtube.svg" alt="Youtube"></a>
 					</div>
 				</nav>
