refresh middle conteiner

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 					<span class="footer__navigation__title">
 						NAVIGATION
 					</span>
-					<div class="navigation__line"></div>
+					<div class="footer__red__line"></div>
 					<div class="navigation__link">
 						<a class="footer__navigation__links" href="#about">About us.</a>
 						<a class="footer__navigation__links" href="#collection">Collection.</a>
@@ -357,8 +357,8 @@
 					<span class="footer__navigation__title">
 						SHOP
 					</span>
-					<div class="shop__line"></div>
-					<div>
+					<div class="footer__red__line"></div>
+					<div class="navigation__link">
 						<a class="footer__shop__links" href="#woman">Woman.</a>
 						<a class="footer__shop__links" href="#man">Man.</a>
 						<a class="footer__shop__links" href="#shoes">Shoes.</a>
@@ -369,7 +369,7 @@
 					<span class="footer__navigation__title">
 						FOLLOW US
 					</span>
-					<div class="follow-us__line"></div>
+					<div class="footer__red__line"></div>
 					<div class="footer__follow-us__link">
 						<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg" alt="Face Book"></a>
 						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg" alt="Instagram"></a>
