--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 				</div>
-				<div class="grid__contact"><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a></div>
+				<div class="grid__contact"><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a>
+				</div>
 				<div class="grid__contact"><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
 			</div>
 		</article>
@@ -29,46 +30,61 @@
 					<img class="header__logo" src="img/logo.svg" alt="Shop Logo">
 				</div>
 				<div class="header-links">
-						<div class="header__link-underline"><a class="header__link" href="#about">About us.</a><div class="underline"></div></div>
-						<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a><hr><div class="underline"></div></div>
-						<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a><div class="underline"></div></div>
-						<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a><div class="underline"></div></div>
-						<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a><div class="underline"></div></div>
+					<div class="header__link-underline"><a class="header__link" href="#about">About us.</a>
+						<div class="underline"></div>
 					</div>
-					<div class="header-socials">
-						<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg"
-								alt="Face Book"></a>
-						<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
-								alt="Instagram"></a>
-						<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
+					<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a>
+						<hr>
+						<div class="underline"></div>
 					</div>
+					<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a>
+						<div class="underline"></div>
+					</div>
+					<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a>
+						<div class="underline"></div>
+					</div>
+					<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a>
+						<div class="underline"></div>
+					</div>
+				</div>
+				<div class="header-socials">
+					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
+					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>
+					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
+				</div>
 				<div></div>
 				<div class="navigation-burger"><span></span></div>
 			</div>
 			<div class="navigation-wrapper">
-				<div class="header__link-underline"><a class="header__link" href="#about">About us.</a><div class="underline"></div></div><br>
-				<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a><div class="underline"></div></div><br>
-				<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a><div class="underline"></div></div><br>
-				<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a><div class="underline"></div></div><br>
-				<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a><div class="underline"></div></div><br><br>
+				<div class="header__link-underline"><a class="header__link" href="#about">About us.</a>
+					<div class="underline"></div>
+				</div><br>
+				<div class="header__link-underline"><a class="header__link" href="#sale">Sale.</a>
+					<div class="underline"></div>
+				</div><br>
+				<div class="header__link-underline"><a class="header__link" href="#collection">Collection.</a>
+					<div class="underline"></div>
+				</div><br>
+				<div class="header__link-underline"><a class="header__link" href="blog.html">Blog.</a>
+					<div class="underline"></div>
+				</div><br>
+				<div class="header__link-underline"><a class="header__link" href="#contact-us">Contact us.</a>
+					<div class="underline"></div>
+				</div><br><br>
 				<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6><br>
 				<a href="mailto:workout@email.com" class="header__contact text-center">workout@email.com</a><br>
 				<a href="tel:12345678900" class="header__contact text-center">+1 (234) 567 89 00</a><br>
-			<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
-			<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"	alt="Instagram"></a>
-			<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
+				<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
+				<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>
+				<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 			</div>
 		</nav>
 		<article class="header-niger">
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-<<<<<<< HEAD
 					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span
 							class="base__span">.</span></h1>
-=======
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
->>>>>>> 1aca79b7042539f1959c8e57d2f634f5098eac01
 					<a href="#collection" class="base__button">Shop Now ⮕</a>
 				</div>
 			</div>
@@ -238,14 +254,14 @@
 				<div class="main-collection__block shop">
 					<div class="shop__menu">
 						<ul class="shop__list">
-							<li><a class="shop__link" href="#">Women</a></li>
-							<li><a class="shop__link" href="#item-men">Men</a></li>
-							<li><a class="shop__link" href="#">Shoes</a></li>
+							<li data-tab="tab-1"><a class="shop__link">Women</a></li>
+							<li data-tab="tab-2"><a class="shop__link">Men</a></li>
+							<li data-tab="tab-3"><a class="shop__link">Shoes</a></li>
 						</ul>
 					</div>
 					<!-- ============================================================= -->
 					<div class="shop__items">
-						<div class="shop__item-women">
+						<div class="shop__item-women " data-tab-content id="tab-1">
 							<div class="card">
 								<div class="block-img">
 									<a class="card__img" href="index-main-collection.html">
@@ -266,6 +282,62 @@
 							<div class="card">
 								<div class="block-img">
 									<a class="card__img" href=""><img src="img/main-collection/women3.jpg" alt=""></a>
+								</div>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+						</div>
+
+						<div class="shop__item-men hiden" data-tab-content id="tab-2">
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href="index-main-collection.html">
+										<img src="img/main-collection/men1.jpg" alt=""></a>
+								</div>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/men2.jpg" alt=""></a>
+								</div>
+								<a href="" class="card__text">adidas compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/men3.jpg" alt=""></a>
+								</div>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+						</div>
+
+						<div class="shop__item-choes hiden" data-tab-content id="tab-3">
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href="index-main-collection.html">
+										<img src="img/main-collection/shoes1.jpg" alt=""></a>
+								</div>
+								<a href="" class="card__text">Adidas Compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/shoes2.jpg" alt=""></a>
+								</div>
+								<a href="" class="card__text">adidas compression Tee</a>
+								<div class="card__price">$33,00</div>
+								<a href="" class="card__link">Add to Cart</a>
+							</div>
+							<div class="card">
+								<div class="block-img">
+									<a class="card__img" href=""><img src="img/main-collection/shoes3.jpg" alt=""></a>
 								</div>
 								<a href="" class="card__text">Adidas Compression Tee</a>
 								<div class="card__price">$33,00</div>
@@ -398,6 +470,8 @@
 		</section>
 	</footer>
 	<script src="js/burger-menu.js"></script>
+	<script src="js/index-main-collection.js"></script>
+
 </body>
 
 </html>
