Footer edited with codewars sign

--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
 				<p class="footer__container__bottom__text">
 					© Created by
 				</p>
+				<img alt="Oleksandr Shcherban" class="kata" src="https://www.codewars.com/users/OleksandrShcherban/badges/small?theme=light">
 				<p class="footer__container__bottom__text">
 					All rights Reserved
 				</p>
