outOfZoom clan members added into footer

--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
 					© Created by
 				</p>
 				<img alt="Oleksandr Shcherban" class="kata" src="https://www.codewars.com/users/OleksandrShcherban/badges/small?theme=light">
+				<img alt="Khval Andrii" class="kata" src="https://www.codewars.com/users/Khval-Andrii/badges/small?theme=light">
 				<p class="footer__container__bottom__text">
 					All rights Reserved
 				</p>
