add basket css and html

--- a/index.html
+++ b/index.html
@@ -468,6 +468,13 @@
 			</div>
 		</section>
 	</footer>
+	<div class="basket basket__wrapper">
+		<div class="basket__svg-bg">
+			<div class="basket__circle-with-number">
+				<span class="basket__quantity-of-goods">1</span>
+			</div>
+		</div>
+	</div>
 	<section class="form-for-basket__bg">
 		<div class="form-for-basket">
 			<header class="form-for-basket__header">
