change css in base__button in sale section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 				<div>
 					<h6 class="header__h6">We’ve extended our returns period to 30 days.</h6>
 				</div>
-				<div class="grid__contact"><a href="mailto:workout@email.com" class="header__contact">workout@email.com</a>
+				<div class="grid__contact"><a href="mailto:workout@email.com"
+						class="header__contact">workout@email.com</a>
 				</div>
-				<div class="grid__contact"><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a></div>
+				<div class="grid__contact"><a href="tel:12345678900" class="header__contact">+1 (234) 567 89 00</a>
+				</div>
 			</div>
 		</article>
 		<nav class="header-menu">
@@ -48,8 +50,10 @@
 					</div>
 				</div>
 				<div class="header-socials">
-					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg" alt="Face Book"></a>
-					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg" alt="Instagram"></a>
+					<a href="https://facebook.com"><img class="header__social" src="img/facebook.svg"
+							alt="Face Book"></a>
+					<a href="https://instagram.com"><img class="header__social" src="img/instagram.svg"
+							alt="Instagram"></a>
 					<a href="https://youtube.com"><img class="header__social" src="img/youtube.svg" alt="Youtube"></a>
 				</div>
 				<div></div>
@@ -144,19 +148,23 @@
 				<div class="about__container">
 					<H2 class="about__h2">About us<span class="base__span">.</span></H2>
 					<div class="about__divider"></div>
-					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who love
+					<h5 class="about__h5">Workout is an American fitness store created by fitness geeks for those who
+						love
 						sport and try to keep fit.</h5>
 					<p class="about__p">At Workout, we know that great results do not come from standing still. We all
 						need to move, push boundaries, and achieve better results every day. The mission of our shop is
 						to
 						support you in this.</p>
-					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And we
+					<p class="about__p">We're sure that everyday fitness can change your lives and bodies forever. And
+						we
 						keep selling comfortable and high-tech clothes and shoes for your outstanding results.</p>
 					<div class="about-socials">
-						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg" alt="Face Book"></a>
+						<a href="https://facebook.com"><img class="about__social" src="img/facebook.svg"
+								alt="Face Book"></a>
 						<a href="https://instagram.com"><img class="about__social" src="img/instagram.svg"
 								alt="Instagram"></a>
-						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg" alt="Youtube"></a>
+						<a href="https://youtube.com"><img class="about__social" src="img/youtube.svg"
+								alt="Youtube"></a>
 					</div>
 				</div>
 			</div>
@@ -401,7 +409,8 @@
 				<div class="container__top__inside__first-order">
 					<!--first order div-->
 					<img class="first-order__inside__icon" src="img/footer_icon.svg" alt="logo">
-					<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
+					<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN
+						UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
 				</div>
 				<div class="container__top__inside__form">
 					<!--form div-->
@@ -448,9 +457,12 @@
 					</span>
 					<div class="footer__red__line"></div>
 					<div class="footer__follow-us__link">
-						<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg" alt="Face Book"></a>
-						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg" alt="Instagram"></a>
-						<a href="https://youtube.com"><img class="footer__social" src="img/youtube.svg" alt="Youtube"></a>
+						<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg"
+								alt="Face Book"></a>
+						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg"
+								alt="Instagram"></a>
+						<a href="https://youtube.com"><img class="footer__social" src="img/youtube.svg"
+								alt="Youtube"></a>
 					</div>
 				</nav>
 			</div>
@@ -460,8 +472,10 @@
 				<p class="footer__container__bottom__text">
 					© Created by
 				</p>
-				<img alt="Oleksandr Shcherban" class="kata" src="https://www.codewars.com/users/OleksandrShcherban/badges/small?theme=light">
-				<img alt="Khval Andrii" class="kata" src="https://www.codewars.com/users/Khval-Andrii/badges/small?theme=light">
+				<img alt="Oleksandr Shcherban" class="kata"
+					src="https://www.codewars.com/users/OleksandrShcherban/badges/small?theme=light">
+				<img alt="Khval Andrii" class="kata"
+					src="https://www.codewars.com/users/Khval-Andrii/badges/small?theme=light">
 				<p class="footer__container__bottom__text">
 					All rights Reserved
 				</p>
@@ -494,8 +508,8 @@
 								<p class="products-list__amount">$60,00</p>
 							</div>
 						</div>
-						<img class="products-list__mini-basket" src="img/form-for-basket/form-for-basket__mini-basket.svg"
-							 alt="mini-basket">
+						<img class="products-list__mini-basket"
+							src="img/form-for-basket/form-for-basket__mini-basket.svg" alt="mini-basket">
 					</div>
 					<div class="products-list__total-price">
 						<span class="products-list__total">Total::</span>
@@ -505,15 +519,16 @@
 				<form class="basket__form" action="">
 					<h6 class="form-for-basket__subtitle">Place an order</h6>
 					<label class="basket__form-label" for="name">Name<span>*</span></label>
-					<input class="basket__form-input" id="name" name="name" type="text" placeholder="Your name" required>
+					<input class="basket__form-input" id="name" name="name" type="text" placeholder="Your name"
+						required>
 					<label class="basket__form-label" for="email">Email<span>*</span></label>
-					<input class="basket__form-input" id="email" name="email" type="email" placeholder="Your email address"
-						   required>
+					<input class="basket__form-input" id="email" name="email" type="email"
+						placeholder="Your email address" required>
 					<label class="basket__form-label" for="tel">Phone<span>*</span></label>
 					<input class="basket__form-input" id="tel" name="tel" type="tel" placeholder="Your phone" required>
 					<label class="basket__form-label" for="comment">Comment</label>
 					<textarea class="basket__form-input basket__form-textarea" name="comment" id="comment"
-							  placeholder="Your comment"></textarea>
+						placeholder="Your comment"></textarea>
 					<button class="base__button" type="submit">Order</button>
 				</form>
 			</div>
