add product-list.js and delete some html in sale section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						best buying experience!
 					</p>
 					<div class="sale__cards">
-						<div class="sale__card">
+						<!-- <div class="sale__card">
 							<a href="trainers.html">
 								<img class="sale__card-img" src="img/mid-season-sale/sale-trainers.png" alt="trainers">
 							</a>
@@ -227,7 +227,7 @@
 							<a href="t-shirt.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
 							<input class="base__button" type="submit" value="Add to Cart">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -536,7 +536,7 @@
 	</section>
 	<script src="js/burger-menu.js"></script>
 	<script src="js/index-main-collection.js"></script>
-
+	<script src="product-list.js"></script>
 </body>
 
 </html>
