rename products.json in sale-products.json, rename product-list.js in sale-product-list.js

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 	</section>
 	<script src="js/burger-menu.js"></script>
 	<script src="js/index-main-collection.js"></script>
-	<script src="product-list.js"></script>
+	<script src="js/sale-product-list.js"></script>
 </body>
 
 </html>
