--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@
 			<div class="base__container">
 				<div class="aspire__container">
 					<h4 class="header__h4">ASPIRE TO MORE</h4>
-<<<<<<< HEAD
 					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span
 							class="base__span">.</span></h1>
-=======
-					<h1 class="header__h1">new <span class="header__h1-accent">collections</span> by top brands<span class="base__span">.</span></h1>
->>>>>>> 8ccc4795087581c8815eb4faf5c453f116490784
 					<a href="#collection" class="base__button">Shop Now ⮕</a>
 				</div>
 			</div>
@@ -218,7 +214,8 @@
 						</div>
 						<div class="sale__card card__media1 card__media2">
 							<a href="t-shirt.html">
-								<img class="sale__card-img card__media1" src="img/mid-season-sale/sale-t-shirt.png" alt="t-shirt">
+								<img class="sale__card-img card__media1" src="img/mid-season-sale/sale-t-shirt.png"
+									alt="t-shirt">
 							</a>
 							<a href="t-shirt.html" class="sale__card-link">Adidas Cloudfoam Trainers</a>
 							<span class="sale__card-price">$60,00</span>
@@ -405,7 +402,8 @@
 				<div class="container__top__inside__first-order">
 					<!--first order div-->
 					<img class="first-order__inside__icon" src="img/footer_icon.svg" alt="logo">
-					<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
+					<p class="first-order__text"><span class="footer__ten__procent">10%</span>OFF YOUR FIRST ORDER. SIGN UP
+						TO OUR NEWSLETTER TO GET THIS SPECIAL OFFER.</p>
 				</div>
 				<div class="container__top__inside__form">
 					<!--form div-->
@@ -453,7 +451,8 @@
 					<div class="footer__red__line"></div>
 					<div class="footer__follow-us__link">
 						<a href="https://facebook.com"><img class="footer__social" src="img/facebook.svg" alt="Face Book"></a>
-						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg" alt="Instagram"></a>
+						<a href="https://instagram.com"><img class="footer__social" src="img/instagram.svg"
+								alt="Instagram"></a>
 						<a href="https://youtube.com"><img class="footer__social" src="img/youtube.svg" alt="Youtube"></a>
 					</div>
 				</nav>
