--- a/index.html
+++ b/index.html
@@ -357,31 +357,40 @@
 		<section class="dealOfTheMonth">
 			<div class="deal__container">
 				<div class="deal__content">
-					<div class="deal_body">
+					<div class="deal__body">
 						<h2 class="deal__title">Deal of the month<span class="title-dot">.</span></h2>
 						<div class="deal__text-price">puma sports bra<span class="deal-price">$50</span><span
 								class="deal__crossed-out"><s>$70</s></span></div>
 						<p class="deal__text">Start your fitness story right away with this<br>comfortable bra and get
 							advantage of our discount.</p>
 						<a class="deal__link" href="#Newarrivals"><span class="deal-arrow">More Details</span></a>
-						<!-- <div class="deal__countdown">
-							<div class="countdown">
-								<div class="days item">Time</div>
-								<div class="count">Days</div>
+						<!-- countdown -->
+						<div class="deal__countdown-body">
+							<div class="countdown-section">
+								<div class="countdown__item">
+									<h3 class="day">Time</h3>
+									<h4 class="days">Days</h4>
+								</div>
 							</div>
-							<div class="countdown hours">
-								<div class="hours item">Time</div>
-								<div class="count">Hours</div>
+							<div class="countdown-section">
+								<div class="countdown__item">
+									<h3 class="hour">Time</h3>
+									<h4 class="hours">Hours</h4>
+								</div>
 							</div>
-							<div class="countdown minutes">
-								<div class="minutes item">Time</div>
-								<div class="count">Minutes</div>
+							<div class="countdown-section">
+								<div class="countdown__item">
+									<h3 class="minute">Time</h3>
+									<h4 class="minutes">Minutes</h4>
+								</div>
 							</div>
-							<div class="countdown seconds">
-								<div class="seconds item">Time</div>
-								<div class="count">Seconds</div>
+							<div class="countdown-section">
+								<div class="countdown__item">
+									<h3 class="second">Time</h3>
+									<h4 class="seconds">Seconds</h4>
+								</div>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</div>
 				<div class="deal__image">
