--- a/index.html
+++ b/index.html
@@ -538,6 +538,7 @@
 	<script src="js/burger-menu.js"></script>
 	<script src="js/index-main-collection.js"></script>
 	<script src="js/sale-product-list.js"></script>
+	<script src="js/basket.js"></script>
 </body>
 
 </html>
